--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PowerBot.Light\PowerBot.Lite.csproj" />
+    <ProjectReference Include="..\PowerBot.Lite\PowerBot.Lite.csproj" />
   </ItemGroup>
 
 </Project>
