--- a/PowerBot.Lite/PowerBot.Lite.csproj
+++ b/PowerBot.Lite/PowerBot.Lite.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Autofac" Version="6.3.0" />
 		<PackageReference Include="Telegram.Bot.Extensions.Polling" Version="1.0.2" />
 	</ItemGroup>
 
