--- a/PowerBot.Lite/PowerBot.Lite.csproj
+++ b/PowerBot.Lite/PowerBot.Lite.csproj
@@ -2,11 +2,29 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Version>$(VersionPrefix)</Version>
+    <Version>1.1.1</Version>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageProjectUrl>https://github.com/awitwicki/PowerBot.Lite</PackageProjectUrl>
+    <PackageTags>telegram, bot, aiogram</PackageTags>
+    <Description>A simple telegram bot framework based on Telegram.Bot</Description>
+    <RepositoryUrl>https://github.com/awitwicki/PowerBot.Lite</RepositoryUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
 	<ItemGroup>
-		<PackageReference Include="Autofac" Version="6.3.0" />
+		<PackageReference Include="Autofac" Version="6.4.0" />
 		<PackageReference Include="Telegram.Bot.Extensions.Polling" Version="1.0.2" />
 	</ItemGroup>
 
