--- a/PowerBot.Lite/PowerBot.Lite.csproj
+++ b/PowerBot.Lite/PowerBot.Lite.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Version>1.2.0</Version>
+    <Version>2.0</Version>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageProjectUrl>https://github.com/awitwicki/PowerBot.Lite</PackageProjectUrl>
@@ -10,6 +10,7 @@
     <Description>A simple telegram bot framework based on Telegram.Bot</Description>
     <RepositoryUrl>https://github.com/awitwicki/PowerBot.Lite</RepositoryUrl>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Title>PowerBot.Lite</Title>
   </PropertyGroup>
 
   <ItemGroup>
