--- a/PowerBot.Lite/PowerBot.Lite.csproj
+++ b/PowerBot.Lite/PowerBot.Lite.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Version>2.1.2</Version>
+    <Version>2.1.3</Version>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageProjectUrl>https://github.com/awitwicki/PowerBot.Lite</PackageProjectUrl>
@@ -26,6 +26,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Autofac" Version="7.1.0" />
+        <PackageReference Include="Telegram.Bot" Version="19.0.0" />
 		<PackageReference Include="Telegram.Bot.Extensions.Polling" Version="1.0.2" />
 	</ItemGroup>
 
